Update CSS links to use absolute paths

--- a/pagamento/index.html
+++ b/pagamento/index.html
@@ -64,9 +64,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagamento via PIX</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link href="css/jEveY9MIwMr2.css" rel="stylesheet">
+    <link href="/css/jEveY9MIwMr2.css" rel="stylesheet">
     <script src="js/l4FeuF26j35m.js"></script>
-    <link rel="stylesheet" href="css/LBvkV62Gb6fQ.css">
+    <link rel="stylesheet" href="/css/LBvkV62Gb6fQ.css">
     <script src="js/o5mZUtEMEVZL.js" data-token="6d2e88a4-0f12-48a0-b9c4-3e8b106feeb0" data-click-id-param="click_id">
     </script>
 </head>
